--- a/Toolkit.NET/Toolkit.NET.csproj
+++ b/Toolkit.NET/Toolkit.NET.csproj
@@ -68,6 +68,9 @@
     <Compile Include="Mapper\MapperKey.cs" />
     <Compile Include="Mapper\MapperSpectialContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegexParser\IRegexParser.cs" />
+    <Compile Include="RegexParser\RegexDirection.cs" />
+    <Compile Include="RegexParser\RegexParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
