--- a/Toolkit.NET/Toolkit.NET.csproj
+++ b/Toolkit.NET/Toolkit.NET.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\Type\DefaultValue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Extensions\Extension.cs" />
     <Compile Include="Extensions\ExtensionsException.cs" />
