--- a/Toolkit.NET/Toolkit.NET.csproj
+++ b/Toolkit.NET/Toolkit.NET.csproj
@@ -48,6 +48,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Priority Queue, Version=4.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\OptimizedPriorityQueue.4.1.1\lib\net45\Priority Queue.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,6 +63,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\Type\DefaultValue.cs" />
+    <Compile Include="Parrallel\IndexedBackgroundWorker.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Parrallel\ParallelExecutor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Extensions\Extension.cs" />
     <Compile Include="Extensions\ExtensionsException.cs" />
@@ -69,9 +77,26 @@
     <Compile Include="Mapper\MapperKey.cs" />
     <Compile Include="Mapper\MapperSpectialContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomNumbers\RandomGenerator\RandomDouble.cs" />
+    <Compile Include="RandomNumbers\RandomGenerator\RandomEmpiric.cs" />
+    <Compile Include="RandomNumbers\RandomGenerator\RandomExponential.cs" />
+    <Compile Include="RandomNumbers\RandomGenerator\RandomInt.cs" />
+    <Compile Include="RandomNumbers\RandomGenerator\RandomNumber.cs" />
+    <Compile Include="RandomNumbers\RandomGenerator\RandomTriangular.cs" />
+    <Compile Include="RandomNumbers\RandomGenerator\SeedGenerator.cs" />
     <Compile Include="RegexParser\IRegexParser.cs" />
     <Compile Include="RegexParser\RegexDirection.cs" />
     <Compile Include="RegexParser\RegexParser.cs" />
+    <Compile Include="Simulations\EventOrientedSimulationCore\EventSimulationCore\Event.cs" />
+    <Compile Include="Simulations\EventOrientedSimulationCore\EventSimulationCore\EventComparer.cs" />
+    <Compile Include="Simulations\EventOrientedSimulationCore\EventSimulationCore\EventSimulation.cs" />
+    <Compile Include="Simulations\EventOrientedSimulationCore\StatisticCollections\ConfidenceInterval.cs" />
+    <Compile Include="Simulations\EventOrientedSimulationCore\StatisticCollections\MeanValue.cs" />
+    <Compile Include="Simulations\EventOrientedSimulationCore\StatisticCollections\StatisticsQueue.cs" />
+    <Compile Include="Simulations\EventOrientedSimulationCore\StatisticCollections\StatisticsStack.cs" />
+    <Compile Include="Simulations\MonteCarloCore\MonteCarlo.cs" />
+    <Compile Include="Simulations\MonteCarloCore\MonteCarloEventArgs.cs" />
+    <Compile Include="Simulations\MonteCarloCore\ReplicationResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
@@ -84,6 +109,15 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Algorithms\Metaheuristics\" />
+    <Folder Include="Algorithms\PathFinding\" />
+    <Folder Include="DataStructures\" />
+    <Folder Include="DllMemoryManagement\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
